changed to latest version of shehzadas code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,10 +11,10 @@
     <p>This is an example page where the chatbot uses a backend proxy to interact with Hugging Face.</p>
 
     <!-- Include the updated Hugging Face logic (no need for tokens here) -->
-    <script src="./huggingface.js" defer></script>
+    <script src="./frontend/huggingface.js" defer></script>
 
     <!-- Include the chat widget -->
-    <script src="./chat-widget.js" defer></script>
+    <script src="./frontend/chat-widget.js" defer></script>
 
 </body>
 </html>
