--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,12 @@
     <h1>Welcome to Customer's Website</h1>
     <p>This is an example page where the chatbot uses a backend proxy to interact with Hugging Face.</p>
 
-    <!-- Include the updated Hugging Face logic (no need for tokens here) -->
-    <script src="./frontend/huggingface.js" defer></script>
-
-    <!-- Include the chat widget -->
-    <script src="./frontend/chat-widget.js" defer></script>
-
+    <!-- Internal -->
+    <!-- <script src="/cdn/huggingface.js" defer></script> -->
+    <!-- <script src="/cdn/chat-widget.js" defer></script> -->
+    
+    <!-- External -->
+    <script src="https://rsmth-test-bot-cdn.onrender.com/huggingface.js" defer></script>
+    <script src="https://rsmth-test-bot-cdn.onrender.com/chat-widget.js" defer></script>
 </body>
 </html>
