Fixed spelling mistake

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Example web page with Saqore AI Chat Bot</h1>
+    <h1>Example web page with Safqore AI Chat Bot</h1>
     <p>
         Embed the following code to use this chat bot on your website: <pre>&lt;script src=&quot;https://rsmth-test-bot-cdn.onrender.com/chat-widget.js&quot; defer&gt;&lt;/script&gt;</pre>
     </p>
