--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,12 +10,13 @@
     <h1>Welcome to Customer's Website</h1>
     <p>This is an example page where the chatbot uses a backend proxy to interact with Hugging Face.</p>
 
-    <!-- Internal -->
-    <!-- <script src="/cdn/huggingface.js" defer></script> -->
-    <!-- <script src="/cdn/chat-widget.js" defer></script> -->
+    <!-- Scripts -->
+    <!-- <script src="{{ script_base_url }}/huggingface.js" defer></script>
+    <script src="{{ script_base_url }}/chat-widget.js" defer></script> -->
     
-    <!-- External -->
-    <script src="https://rsmth-test-bot-cdn.onrender.com/huggingface.js" defer></script>
-    <script src="https://rsmth-test-bot-cdn.onrender.com/chat-widget.js" defer></script>
-</body>
+
+    <script src="/cdn/huggingface.js" defer></script>
+    <script src="/cdn/chat-widget.js" defer></script>
+
+   </body>
 </html>
