added more changes from main and fixed local address changes needed to run the app locally. Now it will dynamically change from local to prod settings

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,12 +13,10 @@
     </p>
 
     <!-- Scripts -->
-    <!-- <script src="{{ script_base_url }}/huggingface.js" defer></script>
-    <script src="{{ script_base_url }}/chat-widget.js" defer></script> -->
-    
-
-    <script src="/cdn/huggingface.js" defer></script>
-    <script src="/cdn/chat-widget.js" defer></script>
+    <script>
+        const BASE_URL = "{{ base_url }}";
+    </script>
+    <script src="{{ script_base_url }}/chat-widget.js" defer></script>
 
    </body>
 </html>
