--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
     <h1>Example web page with Safqore AI Chat Bot</h1>
     <p>
-        Embed the following code to use this chat bot on your website: <pre>&lt;script src=&quot;https://rsmth-test-bot-cdn.onrender.com/chat-widget.js&quot; defer&gt;&lt;/script&gt;</pre>
+        Embed the following code to use this chat bot on your website: <pre>&lt;script src=&quot;https://rstmh-ai-agent-cdn.onrender.com/chat-widget.js&quot; defer&gt;&lt;/script&gt;</pre>
     </p>
 
     <!-- Scripts -->
